--- a/backend/package.json
+++ b/backend/package.json
@@ -7,19 +7,22 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@clerk/express": "^1.7.60",
     "@google/genai": "^1.34.0",
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.1",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "validator": "^13.15.26"
   }
