--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "@clerk/express": "^1.7.60",
